--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,34 @@
 ---
-
+// Métadonnées et logique JavaScript ici
+const titre = "Poetry done wrong";
+const description = "A list of depressive shitty poems";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>{titre}</title>
+    <meta name="description" content={description} />
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>{titre}</h1>
+      <nav>
+        <!-- Liens de navigation ici -->
+        <a href="/blog/">Blog</a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h2>Bienvenue!</h2>
+        <p>{description}</p>
+        <!-- Contenu additionnel ici -->
+      </section>
+    </main>
+    <footer>
+      <!-- Pied de page ici -->
+      © 2024 NK
+    </footer>
+  </body>
 </html>
