--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
-// Métadonnées et logique JavaScript ici
+// Import des articles de blog
+const posts = await Astro.glob("./**/*.md");
 const titre = "Poetry done wrong";
-const description = "A list of depressive shitty poems";
+const description = "The Poetry done wrong website";
 ---
 
 <html>
@@ -9,21 +10,26 @@ const description = "A list of depressive shitty poems";
     <meta charset="UTF-8" />
     <title>{titre}</title>
     <meta name="description" content={description} />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <header>
       <h1>{titre}</h1>
-      <nav>
-        <!-- Liens de navigation ici -->
-        <a href="/blog/">Blog</a>
-      </nav>
     </header>
     <main>
       <section>
-        <h2>Bienvenue!</h2>
-        <p>{description}</p>
-        <!-- Contenu additionnel ici -->
+        <ul>
+          {
+            posts.map((post) => (
+              <li key={post.url}>
+                <a href={post.url}>
+                  <h3>{post.frontmatter.title}</h3>
+                </a>
+              </li>
+            ))
+          }
+        </ul>
       </section>
     </main>
     <footer>
