--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -27,7 +27,7 @@ const { frontmatter } = Astro.props;
     </main>
     <footer>
       <!-- Votre pied de page ici -->
-      © 2024 NK
+       <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://illustrious-hamster-892c10.netlify.app/">Wrong poetry</a> by <span property="cc:attributionName">NK</span> is marked with <a href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC0 1.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"></a></p>
     </footer>
   </body>
 </html>
