--- a/public/styles.css
+++ b/public/styles.css
@@ -13,12 +13,17 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh - 60px); /* Hauteur de la fenêtre de visualisation */
+  min-height: 100vh; /* Hauteur de la fenêtre de visualisation */
 }
 
 main {
-  min-height: calc(100vh - 120px); /* Hauteur de la fenêtre de visualisation */
+  min-height: calc(100vh - 97px - 2rem);
+/* Hauteur de la fenêtre de visualisation */
   /* padding-bottom: 60px; Égale à la hauteur du footer */
+  margin-bottom: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+
 }
 
 a {
@@ -65,21 +70,36 @@ header a {
 footer {
   position: relative;
   width: 100%;
-  height: 60px;
   background-color: #1a1a1a;
   text-align: center;
   color: #828485;
   font-size: 14px;
   opacity: 50%;
+  margin-bottom: 1rem;
 }
 
-footer p, footer a, footer a img {
+footer p,
+footer a,
+footer a img {
   color: #828485;
+  margin: 0;
 }
-
-
 
 .markdown-content {
   margin: 0 auto;
   text-align: center;
+}
+
+.legal {
+  margin: 0 auto;
+  text-align: center;
+  color: #828485;
+  font-size: 14px;
+  opacity: 50%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+}
+
+article{
 }
