--- a/src/pages/legal.astro
+++ b/src/pages/legal.astro
@@ -17,7 +17,7 @@ const description = "The Poetry done wrong website - legal mentions";
       <section>
         <h2>Legal Mentions</h2>
         <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/">
-          <a property="dct:title" rel="cc:attributionURL" href="https://illustrious-hamster-892c10.netlify.app/">Wrong poetry</a> by <span property="cc:attributionName">NK</span> is marked with <a
+          <a property="dct:title" rel="cc:attributionURL" href="https://peotry-done-wrong.netlify.app/">Wrong poetry</a> by <span property="cc:attributionName">NK</span> is marked with <a
             href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1"
             target="_blank"
             rel="license noopener noreferrer"
@@ -46,7 +46,10 @@ const description = "The Poetry done wrong website - legal mentions";
         </p>
 
         <h3>Hosting and Data Management</h3>
-        <p>This site is hosted by <a href="https://www.netlify.com/">Netlify</a>. By using this site, you agree to Netlify's <a href="https://www.netlify.com/privacy/">terms of service</a>, which cover certain aspects of data management and site operation. Please refer to Netlify's terms for more details.</p>
+        <p>
+          This site is hosted by <a href="https://www.netlify.com/">Netlify</a>. By using this site, you agree to Netlify's <a href="https://www.netlify.com/privacy/">terms of service</a>, which cover certain aspects of data management and site operation. Please refer to
+          Netlify's terms for more details.
+        </p>
         <p>
           <a href="/">Home</a>
         </p>
