--- a/src/pages/legal.astro
+++ b/src/pages/legal.astro
@@ -16,17 +16,7 @@ const description = "The Poetry done wrong website - legal mentions";
     <main class="legal">
       <section>
         <h2>Legal Mentions</h2>
-        <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/">
-          <a property="dct:title" rel="cc:attributionURL" href="https://peotry-done-wrong.netlify.app/">Wrong poetry</a> by <span property="cc:attributionName">NK</span> is marked with <a
-            href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1"
-            target="_blank"
-            rel="license noopener noreferrer"
-            style="display:inline-block;"
-            >CC0 1.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" /><img
-              style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
-              src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"
-            /></a>
-        </p>
+       <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://peotry-done-wrong.netlify.app/">Peotry done wrong</a> by <span property="cc:attributionName">NK</span> is marked with <a href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC0 1.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"></a></p>
 
         <h3>Site Publication</h3>
         <p>This site is published by NK.</p>
