maj the weary leaf

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -15,7 +15,7 @@ const { frontmatter } = Astro.props;
   <body>
     <header>
       <!-- Votre en-tête ici -->
-      <a href="/">Go to the list of wrong poetries</a>
+      <a href="/">Go back to the list of poems</a>
     </header>
     <main>
       <article>
