--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 // Import des articles de blog
 const posts = await Astro.glob("./**/*.md");
-const titre = "Poetry done wrong";
-const description = "The Poetry done wrong website";
+const titre = "The Weary Leaf";
+const description = "The Weary Leaf website";
 ---
 
 <html>
