--- a/src/pages/legal.astro
+++ b/src/pages/legal.astro
@@ -16,15 +16,14 @@ const description = "The Poetry done wrong website - legal mentions";
     <main class="legal">
       <section>
         <h2>Legal Mentions</h2>
-       <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://peotry-done-wrong.netlify.app/">Peotry done wrong</a> by <span property="cc:attributionName">NK</span> is marked with <a href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC0 1.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"></a></p>
-
+      <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="http://the-weary-leaf.netlify.app">The Weary Leaf</a> by <span property="cc:attributionName">NK</span> is marked with <a href="http://creativecommons.org/publicdomain/zero/1.0?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC0 1.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1"></a></p>
         <h3>Site Publication</h3>
         <p>This site is published by NK.</p>
         <h3>Contact</h3>
         <p>Email: contact.enka@proton.me</p>
 
         <h3>Content License</h3>
-        <p>All poems on Wrong Poetry by NK are marked with CC0 1.0. They are in the public domain and can be freely shared and used.</p>
+        <p>All poems on The Weary Leaf by NK are marked with CC0 1.0. They are in the public domain and can be freely shared and used.</p>
 
         <h3>Disclaimer</h3>
         <p>The content on this website is purely artistic and for poetic enjoyment. It should not be interpreted otherwise. This website is intended for artistic expression and is not to be taken as professional advice or representation of facts.</p>
