--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -11,6 +11,10 @@ const { frontmatter } = Astro.props;
     <link rel="stylesheet" href="/styles.css" />
     <!-- scale with screens -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -26,10 +30,7 @@ const { frontmatter } = Astro.props;
       </article>
     </main>
     <footer>
-
-       <p><a href="/legal">legal</a></p>
-
-
+      <p><a href="/legal">legal</a></p>
     </footer>
   </body>
 </html>
