--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,10 @@ const description = "The Weary Leaf website";
     <meta name="description" content={description} />
     <link rel="stylesheet" href="/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <header>
@@ -33,8 +37,7 @@ const description = "The Weary Leaf website";
       </section>
     </main>
     <footer>
-       <p><a href="/legal">legal</a></p>
-
+      <p><a href="/legal">legal</a></p>
     </footer>
   </body>
 </html>
