--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 // Import des articles de blog
 const posts = await Astro.glob("./**/*.md");
-const titre = "The Weary Leaf";
-const description = "The Weary Leaf website";
+const titre = "The fantastic blog novels";
+const description = "A blog of fantastic novels";
 ---
 
 <html>
